--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "dev": "astro dev",
     "prebuild": "node scripts/fetch_scryfall_art_crops.mjs",
     "build": "astro build",
+    "test": "vitest",
     "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.5",
     "astro": "^4.16.0"
+  },
+  "devDependencies": {
+    "vitest": "^4.0.18"
   }
 }
