--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.5",
-    "astro": "^4.16.0"
+    "astro": "^4.16.0",
+    "lz-string": "^1.5.0"
   },
   "devDependencies": {
     "vitest": "^4.0.18"
