--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.5",
+    "@astrojs/preact": "^4.1.3",
     "astro": "^4.16.0",
-    "lz-string": "^1.5.0"
+    "lz-string": "^1.5.0",
+    "preact": "^10.28.3"
   },
   "devDependencies": {
     "vitest": "^4.0.18"
