--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "astro dev",
-    "prebuild": "node scripts/build_cards_index.mjs",
+    "prebuild": "node scripts/build_cards_index.mjs && node scripts/fetch_scryfall_art_crops.mjs",
     "build": "astro build",
     "test": "vitest",
     "preview": "astro preview"
