chore: ignore local diagnostic and report files

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ public/data/cards_index/
 OPS_DEPLOY_DIAG_*.txt
 OPS_PROD_HTML*.html
 OPS_PROD_BUNDLE*.js
+informe_proyecto.md
+listado_completo.txt
+project_report.md
